fix random spacing mishaps

--- a/elements/container.scss
+++ b/elements/container.scss
@@ -1,3 +1,7 @@
+@import "../global.scss";
+
+$container-breakpoint: $breakpoint-xl !default;
+
 .container {
 	display: block;
 	max-width: 900px;
@@ -6,7 +10,7 @@
     padding-top: 2em;
 }
 
-@media(max-width: 1000px) {
+@media(max-width: $container-breakpoint) {
 	.container {
 		margin: 0 5vw;
 	}
