--- a/elements/nav.scss
+++ b/elements/nav.scss
@@ -11,7 +11,6 @@
 		("0 0 0.3em", "accent-outline-fade")
 	);
 
-	width: 80% !important;
 	text-align: center;
 	display: block;
 	display: flex;
@@ -20,7 +19,7 @@
 	z-index: 100;
 
 	height: 48px;
-	height: calc(32px + 1em);
+	height: calc(48px + 1em);
 	position: fixed;
 	bottom: 0;
 	left: 0;
